feat: Aufgabe 3
